--- a/Iris/iris.ipynb
+++ b/Iris/iris.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,13 @@
     "import pandas as pd \n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy import stats"
+    "from scipy import stats\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +139,6 @@
     "    axs[1, 1].set_title(f'{name} Petal Width')\n",
     "\n",
     "    plt.tight_layout()\n",
-    "    #plt.close(fig)\n",
     "    plt.savefig(f'Graphics/Boxplots_{name}.png')\n",
     "\n",
     "make_boxplots(versicolor, \"Versicolor\")\n",
@@ -169,12 +169,15 @@
    "metadata": {},
    "source": [
     "## Small NN for Classification between the sets\n",
-    "This will probalby not yield great results as the dataset is so small"
+    "This small Model seems to perform very well on the dataset, eventhough the train and test data is very limited. \n",
+    "It was trained on 80% of the data, the rest was used to test the model. In multiple tries it reached an Accuracy of above 95%. \n",
+    "I would argue this is due to the stark difference in the Flowers, as there are very few overlapping areas. I.E the Petal length of all flowers seems to range from 1 cm to around 7 cm, but is split up between the flowers accordingly: <br>\n",
+    "The Setosa Sepal Length ranges from 1 to about 1.8 cm, whereas the Virginica Sepal Length ranges from 4.5 to 6.8 cm and the Versicolor Sepal Length ranges from 3 to 5 cm. Therefore this can mostly be used as a accurate indicator of the plant.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,6 +186,7 @@
     "\n",
     "class MLP(nn.Module): \n",
     "    def __init__(self, dim_in, classes): \n",
+    "        super(MLP, self).__init__()\n",
     "        self.mlp = nn.Sequential(\n",
     "            nn.Linear(dim_in, 16),\n",
     "            nn.Linear(16, 32),\n",
@@ -190,34 +194,348 @@
     "            nn.Linear(64, classes)\n",
     "        )\n",
     "        self.tanh = nn.Tanh()\n",
+    "        # Flatten it to one class for easier usability later\n",
+    "        self.flatten = nn.Linear(classes, 1)\n",
     "\n",
     "    def forward(self, x): \n",
     "        out = self.mlp(x)\n",
     "        out = self.tanh(out)\n",
+    "        out = self.flatten(out)\n",
     "        return out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1, Training Loss: 0.9140\n",
+      "Epoch 2, Training Loss: 0.7201\n",
+      "Epoch 3, Training Loss: 0.6421\n",
+      "Epoch 4, Training Loss: 0.6086\n",
+      "Epoch 5, Training Loss: 0.5893\n",
+      "Epoch 6, Training Loss: 0.5727\n",
+      "Epoch 7, Training Loss: 0.5552\n",
+      "Epoch 8, Training Loss: 0.5351\n",
+      "Epoch 9, Training Loss: 0.5115\n",
+      "Epoch 10, Training Loss: 0.4835\n",
+      "Epoch 11, Training Loss: 0.4505\n",
+      "Epoch 12, Training Loss: 0.4119\n",
+      "Epoch 13, Training Loss: 0.3676\n",
+      "Epoch 14, Training Loss: 0.3188\n",
+      "Epoch 15, Training Loss: 0.2679\n",
+      "Epoch 16, Training Loss: 0.2186\n",
+      "Epoch 17, Training Loss: 0.1750\n",
+      "Epoch 18, Training Loss: 0.1403\n",
+      "Epoch 19, Training Loss: 0.1152\n",
+      "Epoch 20, Training Loss: 0.0986\n",
+      "Epoch 21, Training Loss: 0.0884\n",
+      "Epoch 22, Training Loss: 0.0823\n",
+      "Epoch 23, Training Loss: 0.0788\n",
+      "Epoch 24, Training Loss: 0.0767\n",
+      "Epoch 25, Training Loss: 0.0753\n",
+      "Epoch 26, Training Loss: 0.0744\n",
+      "Epoch 27, Training Loss: 0.0736\n",
+      "Epoch 28, Training Loss: 0.0730\n",
+      "Epoch 29, Training Loss: 0.0724\n",
+      "Epoch 30, Training Loss: 0.0718\n",
+      "Epoch 31, Training Loss: 0.0712\n",
+      "Epoch 32, Training Loss: 0.0707\n",
+      "Epoch 33, Training Loss: 0.0702\n",
+      "Epoch 34, Training Loss: 0.0696\n",
+      "Epoch 35, Training Loss: 0.0691\n",
+      "Epoch 36, Training Loss: 0.0686\n",
+      "Epoch 37, Training Loss: 0.0681\n",
+      "Epoch 38, Training Loss: 0.0676\n",
+      "Epoch 39, Training Loss: 0.0671\n",
+      "Epoch 40, Training Loss: 0.0667\n",
+      "Epoch 41, Training Loss: 0.0662\n",
+      "Epoch 42, Training Loss: 0.0657\n",
+      "Epoch 43, Training Loss: 0.0653\n",
+      "Epoch 44, Training Loss: 0.0648\n",
+      "Epoch 45, Training Loss: 0.0644\n",
+      "Epoch 46, Training Loss: 0.0640\n",
+      "Epoch 47, Training Loss: 0.0635\n",
+      "Epoch 48, Training Loss: 0.0631\n",
+      "Epoch 49, Training Loss: 0.0627\n",
+      "Epoch 50, Training Loss: 0.0623\n",
+      "Epoch 51, Training Loss: 0.0619\n",
+      "Epoch 52, Training Loss: 0.0615\n",
+      "Epoch 53, Training Loss: 0.0611\n",
+      "Epoch 54, Training Loss: 0.0607\n",
+      "Epoch 55, Training Loss: 0.0603\n",
+      "Epoch 56, Training Loss: 0.0600\n",
+      "Epoch 57, Training Loss: 0.0596\n",
+      "Epoch 58, Training Loss: 0.0592\n",
+      "Epoch 59, Training Loss: 0.0589\n",
+      "Epoch 60, Training Loss: 0.0585\n",
+      "Epoch 61, Training Loss: 0.0582\n",
+      "Epoch 62, Training Loss: 0.0579\n",
+      "Epoch 63, Training Loss: 0.0575\n",
+      "Epoch 64, Training Loss: 0.0572\n",
+      "Epoch 65, Training Loss: 0.0569\n",
+      "Epoch 66, Training Loss: 0.0566\n",
+      "Epoch 67, Training Loss: 0.0562\n",
+      "Epoch 68, Training Loss: 0.0559\n",
+      "Epoch 69, Training Loss: 0.0556\n",
+      "Epoch 70, Training Loss: 0.0553\n",
+      "Epoch 71, Training Loss: 0.0551\n",
+      "Epoch 72, Training Loss: 0.0548\n",
+      "Epoch 73, Training Loss: 0.0545\n",
+      "Epoch 74, Training Loss: 0.0542\n",
+      "Epoch 75, Training Loss: 0.0540\n",
+      "Epoch 76, Training Loss: 0.0537\n",
+      "Epoch 77, Training Loss: 0.0534\n",
+      "Epoch 78, Training Loss: 0.0532\n",
+      "Epoch 79, Training Loss: 0.0529\n",
+      "Epoch 80, Training Loss: 0.0527\n",
+      "Epoch 81, Training Loss: 0.0525\n",
+      "Epoch 82, Training Loss: 0.0522\n",
+      "Epoch 83, Training Loss: 0.0520\n",
+      "Epoch 84, Training Loss: 0.0518\n",
+      "Epoch 85, Training Loss: 0.0516\n",
+      "Epoch 86, Training Loss: 0.0514\n",
+      "Epoch 87, Training Loss: 0.0512\n",
+      "Epoch 88, Training Loss: 0.0510\n",
+      "Epoch 89, Training Loss: 0.0508\n",
+      "Epoch 90, Training Loss: 0.0506\n",
+      "Epoch 91, Training Loss: 0.0504\n",
+      "Epoch 92, Training Loss: 0.0503\n",
+      "Epoch 93, Training Loss: 0.0501\n",
+      "Epoch 94, Training Loss: 0.0499\n",
+      "Epoch 95, Training Loss: 0.0498\n",
+      "Epoch 96, Training Loss: 0.0496\n",
+      "Epoch 97, Training Loss: 0.0494\n",
+      "Epoch 98, Training Loss: 0.0493\n",
+      "Epoch 99, Training Loss: 0.0491\n",
+      "Epoch 100, Training Loss: 0.0490\n",
+      "Epoch 101, Training Loss: 0.0489\n",
+      "Epoch 102, Training Loss: 0.0487\n",
+      "Epoch 103, Training Loss: 0.0486\n",
+      "Epoch 104, Training Loss: 0.0485\n",
+      "Epoch 105, Training Loss: 0.0484\n",
+      "Epoch 106, Training Loss: 0.0483\n",
+      "Epoch 107, Training Loss: 0.0481\n",
+      "Epoch 108, Training Loss: 0.0480\n",
+      "Epoch 109, Training Loss: 0.0479\n",
+      "Epoch 110, Training Loss: 0.0478\n",
+      "Epoch 111, Training Loss: 0.0477\n",
+      "Epoch 112, Training Loss: 0.0476\n",
+      "Epoch 113, Training Loss: 0.0475\n",
+      "Epoch 114, Training Loss: 0.0474\n",
+      "Epoch 115, Training Loss: 0.0473\n",
+      "Epoch 116, Training Loss: 0.0473\n",
+      "Epoch 117, Training Loss: 0.0472\n",
+      "Epoch 118, Training Loss: 0.0471\n",
+      "Epoch 119, Training Loss: 0.0470\n",
+      "Epoch 120, Training Loss: 0.0469\n",
+      "Epoch 121, Training Loss: 0.0469\n",
+      "Epoch 122, Training Loss: 0.0468\n",
+      "Epoch 123, Training Loss: 0.0467\n",
+      "Epoch 124, Training Loss: 0.0466\n",
+      "Epoch 125, Training Loss: 0.0466\n",
+      "Epoch 126, Training Loss: 0.0465\n",
+      "Epoch 127, Training Loss: 0.0464\n",
+      "Epoch 128, Training Loss: 0.0464\n",
+      "Epoch 129, Training Loss: 0.0463\n",
+      "Epoch 130, Training Loss: 0.0463\n",
+      "Epoch 131, Training Loss: 0.0462\n",
+      "Epoch 132, Training Loss: 0.0462\n",
+      "Epoch 133, Training Loss: 0.0461\n",
+      "Epoch 134, Training Loss: 0.0460\n",
+      "Epoch 135, Training Loss: 0.0460\n",
+      "Epoch 136, Training Loss: 0.0459\n",
+      "Epoch 137, Training Loss: 0.0459\n",
+      "Epoch 138, Training Loss: 0.0458\n",
+      "Epoch 139, Training Loss: 0.0458\n",
+      "Epoch 140, Training Loss: 0.0457\n",
+      "Epoch 141, Training Loss: 0.0457\n",
+      "Epoch 142, Training Loss: 0.0456\n",
+      "Epoch 143, Training Loss: 0.0456\n",
+      "Epoch 144, Training Loss: 0.0456\n",
+      "Epoch 145, Training Loss: 0.0455\n",
+      "Epoch 146, Training Loss: 0.0455\n",
+      "Epoch 147, Training Loss: 0.0454\n",
+      "Epoch 148, Training Loss: 0.0454\n",
+      "Epoch 149, Training Loss: 0.0453\n",
+      "Epoch 150, Training Loss: 0.0453\n",
+      "Epoch 151, Training Loss: 0.0453\n",
+      "Epoch 152, Training Loss: 0.0452\n",
+      "Epoch 153, Training Loss: 0.0452\n",
+      "Epoch 154, Training Loss: 0.0451\n",
+      "Epoch 155, Training Loss: 0.0451\n",
+      "Epoch 156, Training Loss: 0.0451\n",
+      "Epoch 157, Training Loss: 0.0450\n",
+      "Epoch 158, Training Loss: 0.0450\n",
+      "Epoch 159, Training Loss: 0.0449\n",
+      "Epoch 160, Training Loss: 0.0449\n",
+      "Epoch 161, Training Loss: 0.0449\n",
+      "Epoch 162, Training Loss: 0.0448\n",
+      "Epoch 163, Training Loss: 0.0448\n",
+      "Epoch 164, Training Loss: 0.0448\n",
+      "Epoch 165, Training Loss: 0.0447\n",
+      "Epoch 166, Training Loss: 0.0447\n",
+      "Epoch 167, Training Loss: 0.0447\n",
+      "Epoch 168, Training Loss: 0.0446\n",
+      "Epoch 169, Training Loss: 0.0446\n",
+      "Epoch 170, Training Loss: 0.0446\n",
+      "Epoch 171, Training Loss: 0.0445\n",
+      "Epoch 172, Training Loss: 0.0445\n",
+      "Epoch 173, Training Loss: 0.0445\n",
+      "Epoch 174, Training Loss: 0.0444\n",
+      "Epoch 175, Training Loss: 0.0444\n",
+      "Epoch 176, Training Loss: 0.0444\n",
+      "Epoch 177, Training Loss: 0.0443\n",
+      "Epoch 178, Training Loss: 0.0443\n",
+      "Epoch 179, Training Loss: 0.0443\n",
+      "Epoch 180, Training Loss: 0.0442\n",
+      "Epoch 181, Training Loss: 0.0442\n",
+      "Epoch 182, Training Loss: 0.0442\n",
+      "Epoch 183, Training Loss: 0.0441\n",
+      "Epoch 184, Training Loss: 0.0441\n",
+      "Epoch 185, Training Loss: 0.0441\n",
+      "Epoch 186, Training Loss: 0.0441\n",
+      "Epoch 187, Training Loss: 0.0440\n",
+      "Epoch 188, Training Loss: 0.0440\n",
+      "Epoch 189, Training Loss: 0.0440\n",
+      "Epoch 190, Training Loss: 0.0439\n",
+      "Epoch 191, Training Loss: 0.0439\n",
+      "Epoch 192, Training Loss: 0.0439\n",
+      "Epoch 193, Training Loss: 0.0438\n",
+      "Epoch 194, Training Loss: 0.0438\n",
+      "Epoch 195, Training Loss: 0.0438\n",
+      "Epoch 196, Training Loss: 0.0438\n",
+      "Epoch 197, Training Loss: 0.0437\n",
+      "Epoch 198, Training Loss: 0.0437\n",
+      "Epoch 199, Training Loss: 0.0437\n",
+      "Epoch 200, Training Loss: 0.0437\n"
+     ]
+    }
+   ],
    "source": [
     "# Prepare the Data for MLP \n",
-    "copy_data = data\n",
+    "copy_data = data.copy()\n",
+    "\n",
     "# One-hot encode the Species column\n",
     "copy_data['Species'] = copy_data['Species'].astype('category').cat.codes\n",
-    "\n",
+    "y = copy_data['Species']\n",
     "# Remove the 'Id' column\n",
     "copy_data = copy_data.drop(columns=['Id'])\n",
+    "copy_data = copy_data.drop(columns=['Species'])\n",
     "\n",
     "# Convert the DataFrame to a numpy array\n",
-    "data_array = copy_data.to_numpy\n",
+    "data_array = copy_data.to_numpy()\n",
+    "\n",
+    "# normalize features\n",
+    "copy_data = copy_data / copy_data.max(axis=0)\n",
+    "\n",
+    "# Generate shuffled indices\n",
+    "indices = list(range(len(copy_data)))\n",
+    "random.shuffle(indices)\n",
     "\n",
     "\n",
+    "train = (len(indices) * 0.8).__round__() # 80% of the data\n",
+    "test = train + (len(indices) * 0.2).__round__() # 20% of the data\n",
+    "X_train, y_train = copy_data.iloc[indices[:train]], y.iloc[indices[:train]]\n",
+    "X_test, y_test = copy_data.iloc[indices[train:test]], y.iloc[indices[train:test]] \n",
     "\n",
-    "def train(data, num_epochs, batch_size, ):\n",
-    "    pass"
+    "def train(X_train, y_train, num_epochs, batch_size, model, lr):\n",
+    "    num_batches = int(np.ceil(len(X_train) / batch_size))\n",
+    "\n",
+    "    for epoch in range(num_epochs):\n",
+    "        total_loss = 0\n",
+    "\n",
+    "        for batch_idx in range(num_batches):\n",
+    "            # Get the batch\n",
+    "            start_idx = batch_idx * batch_size\n",
+    "            end_idx = (batch_idx + 1) * batch_size\n",
+    "            X_batch = X_train.iloc[start_idx:end_idx].to_numpy()\n",
+    "            y_batch = y_train.iloc[start_idx:end_idx].to_numpy()\n",
+    "            \n",
+    "            # Forward pass\n",
+    "            preds = [model(torch.tensor(x_i, dtype=torch.float32)) for x_i in X_batch]\n",
+    "            \n",
+    "            # Loss calculation\n",
+    "            y_loss = [(ytrue - ypred) ** 2 for ytrue, ypred in zip(y_batch, preds)]\n",
+    "            loss = sum(y_loss)\n",
+    "            total_loss += loss.item()\n",
+    "\n",
+    "            for p in model.parameters():\n",
+    "                p.grad = None\n",
+    "\n",
+    "            # Backward pass\n",
+    "            loss.backward()\n",
+    "\n",
+    "            # Update the parameters\n",
+    "            for p in model.parameters():\n",
+    "                p.data += -lr * p.grad       \n",
+    "        \n",
+    "        avg_loss = total_loss / len(X_train)\n",
+    "        #train_losses.append(avg_loss)\n",
+    "        print(f\"Epoch {epoch + 1}, Training Loss: {avg_loss:.4f}\")\n",
+    "\n",
+    "model = MLP(dim_in=4, classes=3)\n",
+    "num_epochs = 200\n",
+    "batch_size = 16\n",
+    "lr = 0.001\n",
+    "train(X_train,y_train, num_epochs, batch_size, model, 0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Accuracy: 1.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "def evaluate(model, X_val, y_val):\n",
+    "    model.eval()  # Set the model to evaluation mode\n",
+    "    correct = 0\n",
+    "    total = len(y_val)\n",
+    "    \n",
+    "    with torch.no_grad():  # Disable gradient calculation\n",
+    "        for i in range(total):\n",
+    "            x = torch.tensor(X_val.iloc[i].to_numpy(), dtype=torch.float32)\n",
+    "            y_true = y_val.iloc[i]\n",
+    "            y_pred = model(x)\n",
+    "            y_pred_class = torch.round(y_pred).item()\n",
+    "            #y_pred_class = np.argmax(y_pred.data)\n",
+    "            if y_pred_class == y_true:\n",
+    "                correct += 1\n",
+    "    \n",
+    "    accuracy = correct / total\n",
+    "    print(f'Validation Accuracy: {accuracy:.4f}')\n",
+    "\n",
+    "evaluate(model, X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Accuracy: 0.9799\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test Accuracy over entire dataset as the Test dataset is so small\n",
+    "evaluate(model, copy_data, y)"
    ]
   }
  ],
